# CMakeProjectTemplate

./: LICENSE  README.md
CMakeProjectTemplate1/: CMakeLists.txt
CMakeProjectTemplate1/scripts/: build_win32_mingw.bat
CMakeProjectTemplate1/scripts/build_QtC/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
CMakeProjectTemplate1/scripts/build_QtC/.cmake/api/v1/reply/: cache-v2-13bd22bc45fc2c9dea2a.json  cmakeFiles-v1-0cde6bdcdf715b8a4119.json  codemodel-v2-792cd35b0f436e7f7c0c.json  index-2020-09-27T15-11-58-0167.json  target-HelloApp-Debug-47db912aaca098b99c15.json
CMakeProjectTemplate1/scripts/build_QtC/src/: cmake_install.cmake
CMakeProjectTemplate1/scripts/build_QtC/src/common/: cmake_install.cmake
CMakeProjectTemplate1/scripts/build_QtC/src/logger/: cmake_install.cmake
CMakeProjectTemplate1/scripts/build_out/: CMakeCache.txt
CMakeProjectTemplate1/src/: CMakeLists.txt
CMakeProjectTemplate2/: CMakeLists.txt
CMakeProjectTemplate2/scripts/: build_win32_mingw.bat  build_win32_msvc.bat
CMakeProjectTemplate2/src/: CMakeLists.txt
