CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

# compiler configuration
IF(CMAKE_VERSION VERSION_LESS "3.1")
    IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
    ENDIF()
ELSE()
    SET(CMAKE_CXX_STANDARD 11)
ENDIF()

# submodule
ADD_SUBDIRECTORY(common)
#ADD_SUBDIRECTORY(logger)

# main app
SET(SRC_LIST ./main/main.cpp)
ADD_EXECUTABLE(HelloApp ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Bin/${CMAKE_BUILD_TYPE})

INSTALL(TARGETS HelloApp
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)


